Test whether JS kernel works

--- a/01-Intro.ipynb
+++ b/01-Intro.ipynb
@@ -14,7 +14,8 @@
     "2. Console app development (JS only)\n",
     "There are minor differences between them. We will talk about it later.\n",
     "\n",
-    "This series will start with **Console** apps first."
+    "We will start with **Console** apps first.\n",
+    "<hr>"
    ]
   },
   {
@@ -22,10 +23,10 @@
    "id": "7f81aa90",
    "metadata": {},
    "source": [
-    "To run console apps developed in JavaScript, The classic way is to write JavaScript code in a file with an ˋjsˋ extension, then use an \"engine\" to run the file.\n",
+    "To run console apps developed in JavaScript, The classic way is to write JavaScript code in a file with an `js` extension, then use an \"engine\" to run the file.\n",
     "\n",
-    "There are many engines to choose from. We will use the most popular one called NodeJS.  \n",
-    "I'd suggest you to [download](https://nodejs.org/en/download) and it now.\n"
+    "There are many engines to choose from. In this series we will use the most popular one called NodeJS.\n",
+    "<hr>"
    ]
   },
   {
@@ -33,7 +34,23 @@
    "id": "26e94ee0",
    "metadata": {},
    "source": [
-    "For each tutorial in this series, you can copy all code blocks in order into a .JS file (e.g. tutorial.js) and run it in a terminal using ˋnode tutorial.jsˋ. You can also press the Run button (Looks like a triangle) in each block to execute the code within the tutorial."
+    "Throughout the series, you will see a lot of code blocks. For each tutorial, create a .js file in `src` folder. Whenever you see a code block, simply copy and paste the code into the .js file.\n",
+    "\n",
+    "An example is provided. Start a terminal and run `node src/01.js` now!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65aaed0c",
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "console.log(\"Test\")"
    ]
   }
  ],
