VSCode can preview ipynb without any extensions

--- a/01-Intro.ipynb
+++ b/01-Intro.ipynb
@@ -12,8 +12,8 @@
     "JavaScript is mainly used in 2 scenarios:\n",
     "1. Website app development (3 languages are used: HTML+CSS+JS)\n",
     "2. Console app development (JS only)\n",
-    "There are minor differences between them. We will talk about it later.\n",
     "\n",
+    "There are minor differences between them. We will talk about it later.  \n",
     "We will start with **Console** apps first.\n",
     "<hr>"
    ]
@@ -34,15 +34,20 @@
    "id": "26e94ee0",
    "metadata": {},
    "source": [
-    "Throughout the series, you will see a lot of code blocks. For each tutorial, create a .js file in `src` folder. Whenever you see a code block, simply copy and paste the code into the .js file.\n",
+    "## Running code in this series\n",
+    "Throughout the series, you will see a lot of code blocks. For each tutorial, create a .js file in `src` folder.  \n",
+    "In the tutorial, Whenever you see a code block, simply copy and paste the code into the .js file.\n",
     "\n",
-    "An example is provided. Start a terminal and run `node src/01.js` now!"
+    "An example is provided. Start a terminal in VSCode and run `node src/01.js` now!\n",
+    "\n",
+    "If you have setup [JavaScript for Jupyter](README.md#javascript-for-jupyter) properly, you can also run each code block.  \n",
+    "Here is an example. Try run it!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65aaed0c",
+   "id": "ec9c73d7",
    "metadata": {
     "vscode": {
      "languageId": "javascript"
@@ -50,7 +55,8 @@
    },
    "outputs": [],
    "source": [
-    "console.log(\"Test\")"
+    "console.log('<--- The run button is at the left hand side!')\n",
+    "console.log('You will see this exact sentence right after the code block.')"
    ]
   }
  ],
