Switching to Deno

--- a/01-Intro.ipynb
+++ b/01-Intro.ipynb
@@ -11,9 +11,8 @@
     "\n",
     "JavaScript is mainly used in 2 scenarios:\n",
     "1. Website app development (3 languages are used: HTML+CSS+JS)\n",
-    "2. Console app development (JS only)\n",
+    "2. Server-side development (JS only)\n",
     "\n",
-    "There are minor differences between them. We will talk about it later.  \n",
     "We will start with **Console** apps first.\n",
     "<hr>"
    ]
@@ -25,7 +24,7 @@
    "source": [
     "To run console apps developed in JavaScript, The classic way is to write JavaScript code in a file with an `js` extension, then use an \"engine\" to run the file.\n",
     "\n",
-    "There are many engines to choose from. In this series we will use the most popular one called NodeJS.\n",
+    "There are many engines to choose from. In this series we will use Deno.\n",
     "<hr>"
    ]
   },
@@ -34,13 +33,16 @@
    "id": "26e94ee0",
    "metadata": {},
    "source": [
-    "## Running code in this series\n",
+    "### Running code in this series\n",
     "Throughout the series, you will see a lot of code blocks. For each tutorial, create a .js file in `src` folder.  \n",
     "In the tutorial, Whenever you see a code block, simply copy and paste the code into the .js file.\n",
     "\n",
-    "An example is provided. Start a terminal in VSCode and run `node src/01.js` now!\n",
+    "An example is provided. Start a terminal in VSCode and run `deno src/01.js` now!\n",
     "\n",
-    "If you have setup [JavaScript for Jupyter](README.md#javascript-for-jupyter) properly, you can also run each code block.  \n",
+    "<br>\n",
+    "\n",
+    "If you have setup [JavaScript for Jupyter](./README.md#javascript-for-jupyter) properly, you can also run each code block.  \n",
+    "You have to press `Select kernel` at the top right corner in VSCode and select Deno.\n",
     "Here is an example. Try run it!"
    ]
   },
@@ -48,21 +50,28 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ec9c73d7",
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "console.log('<--- The run button is at the left hand side!')\n",
-    "console.log('You will see this exact sentence right after the code block.')"
+    "console.log('You will see this exact sentence right after this code block.')"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Deno",
+   "language": "typescript",
+   "name": "deno"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": "typescript",
+   "file_extension": ".ts",
+   "mimetype": "text/x.typescript",
+   "name": "typescript",
+   "nbconvert_exporter": "script",
+   "pygments_lexer": "typescript",
+   "version": "5.7.3"
   }
  },
  "nbformat": 4,
